# simwar2

./: CMakeLists.txt  README.md  battle.cpp  battle.h  battle_log.lua  client.cpp  client.h  hero.cpp  hero.h  hero.lua  main.cpp  simwar2.cbp  simwar2.depend  simwar2.layout  test.lua
api/hero/: caller.lua  logger.lua  simplehero.lua  std.lua
config/: CMakeLists.txt  config.h.in
hero/: c++ vs lua.txt  eklit.lua  sora.lua
include/: battle-bak.h  battle.h  client.h  combi.h  director.h  entity.h  hero.h  logger.h  program.h  proxy.h  role.h  server.h  team.h  test.h
include/client/: board.h  client_control.h  client_model.h  client_view.h  driver.h  element.h  label.h  progress_bar.h
include/combi/: model.h
include/server/: api.h  api_attack.h  battle.h  director.h  entity.h  errors.h  hero.h  logger.h  proxy.h  role.h  team.h
lib/: CMakeLists.txt
lib/lua/: CMakeLists.txt  txt
resources/: CMakeLists.txt
resources/lua/: client.lua
resources/lua/default/: team_a.lua  team_b.lua
resources/lua/default/hero/: eklit.lua  sora.lua
resources/lua/hero/: sora.lua
src/: CMakeLists.txt  battle.cpp  client.cpp  director.cpp  entity.cpp  formation_rating.cpp  hero.cpp  main.cpp  program.cpp  role.cpp  simwar.cpp  team.cpp  test.cpp  test_client.cpp  test_combi.cpp  test_server.cpp
src/client/: CMakeLists.txt  board.cpp  client_control.cpp  client_model.cpp  client_view.cpp  driver.cpp  element.cpp  label.cpp  progress_bar.cpp
src/combi/: CMakeLists.txt  combi.cpp
src/server/: CMakeLists.txt  api.cpp  api_attack.cpp  battle.cpp  director.cpp  logger.cpp  proxy.cpp  role.cpp  server.cpp  team.cpp
